--- a/docs/nn_softmaxCrossEntropy.ipynb
+++ b/docs/nn_softmaxCrossEntropy.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## nn"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,15 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "class Neural():\n",
-    "    def __call__(self, *args):\n",
-    "        self.args = args\n",
-    "        self.out = self.forward(*args)\n",
-    "        return self.out\n",
-    "    \n",
-    "    def forward(self): raise Exception('not implemented')\n",
-    "    def backward(self): self.bwd(self.out, *self.args)"
+    "import sys\n",
+    "sys.path.append('/data/home/jdavey/notebooks/fastai/mi')\n",
+    "from nn.neural import Neural"
    ]
   },
   {
@@ -41,59 +28,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "class Relu(Neural):\n",
-    "    def forward(self, inp): return inp.clamp_min(0.)-0.5\n",
-    "    def bwd(self, out, inp): inp.g = (inp>0).float() * out.g"
+    "class SoftmaxCrossEntropy(Neural):\n",
+    "    \n",
+    "    def softmax_forward(self, inp): \n",
+    "        m = inp.max(-1)[0]\n",
+    "        exps = (inp-m[:, None]).exp()\n",
+    "        return exps / exps.sum(-1,keepdim=True)\n",
+    "    \n",
+    "    def cross_entropy_forward(self, inp, targ):\n",
+    "         return -inp[range(targ.shape[0]), targ].mean()\n",
+    "    \n",
+    "    def forward(self, inp_softmax, targ):\n",
+    "        inp = self.softmax_forward(inp_softmax)\n",
+    "        return self.cross_entropy_forward(inp, targ)\n",
+    "    \n",
+    "    def bwd(self, out, inp, targ): \n",
+    "        one_hot = torch.zeros(inp.shape)\n",
+    "        one_hot[torch.arange(targ.shape[0]), targ] = 1\n",
+    "        \n",
+    "        m = targ.shape[0]\n",
+    "        grad = self.softmax_forward(inp)\n",
+    "        grad[torch.arange(m), targ] = -1\n",
+    "        inp.g = grad/m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "class Lin(Neural):\n",
-    "    def __init__(self, w, b): self.w,self.b = w,b\n",
-    "        \n",
-    "    def forward(self, inp): return inp@self.w + self.b\n",
-    "    \n",
-    "    def bwd(self, out, inp):\n",
-    "        inp.g = out.g @ self.w.t()\n",
-    "        self.w.g = inp.t() @ out.g\n",
-    "        #self.w.g = torch.einsum(\"bi,bj->ij\", inp, out.g)\n",
-    "        self.b.g = out.g.sum(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "class Mse(Neural):\n",
-    "    def forward (self, inp, targ): return (inp.squeeze() - targ).pow(2).mean()\n",
-    "    def bwd(self, out, inp, targ): inp.g = 2*(inp.squeeze()-targ).unsqueeze(-1) / targ.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted nn.ipynb to /data/home/jdavey/notebooks/fastai/mi/nn.py\r\n",
-      "Converted nn.ipynb to /data/home/jdavey/notebooks/fastai/mi/dev/exp/nn.py\r\n"
+      "Converted nn_softmaxCrossEntropy.ipynb to /data/home/jdavey/notebooks/fastai/mi/nn/softmaxCrossEntropy.py\r\n"
      ]
     }
    ],
    "source": [
-    "!python notebook2script.py nn.ipynb"
+    "!python notebook2script.py nn_softmaxCrossEntropy.ipynb"
    ]
   },
   {
