Custom layers implemented

--- a/docs/nn_mse.ipynb
+++ b/docs/nn_mse.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "import sys\n",
     "sys.path.append('/data/home/jdavey/notebooks/fastai/mi')\n",
     "from nn.neural import Neural"
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
