--- a/docs/nn_softmaxCrossEntropy.ipynb
+++ b/docs/nn_softmaxCrossEntropy.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "import sys\n",
     "sys.path.append('/data/home/jdavey/notebooks/fastai/mi')\n",
     "from nn.neural import Neural"
@@ -28,6 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "class SoftmaxCrossEntropy(Neural):\n",
     "    \n",
     "    def softmax_forward(self, inp): \n",
@@ -54,13 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Replacing old file\r\n",
       "Converted nn_softmaxCrossEntropy.ipynb to /data/home/jdavey/notebooks/fastai/mi/nn/softmaxCrossEntropy.py\r\n"
      ]
     }
