--- a/models/model2-softmax.ipynb
+++ b/models/model2-softmax.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from exp.data_loader import *\n",
-    "from exp.nn import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,10 +12,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "In Command mode press `h` to see all shortcuts"
+    "import sys\n",
+    "sys.path.append('/data/home/jdavey/notebooks/fastai/mi')\n",
+    "from data.loader import *\n",
+    "from nn.lin import *\n",
+    "from nn.relu import *\n",
+    "from nn.softmaxCrossEntropy import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import torch"
    ]
   },
   {
@@ -56,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +84,7 @@
        "(50000, 784, tensor(10))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,34 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "import math\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train,y_train,x_valid,y_valid = get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,28 +149,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<nn.lin.Lin object at 0x7f0dd40e1eb8>, <nn.relu.Relu object at 0x7f0dd40e1e80>, <nn.lin.Lin object at 0x7f0dd40e1908>]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor(-0.0987)"
+       "tensor(-0.0887)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = Model()\n",
+    "print(model.layers)\n",
     "loss = model(x_train, y_train); loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.1068)"
+       "tensor(0.0821)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,33 +219,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.4435)\n",
-      "tensor(0.4606)\n",
-      "tensor(0.4806)\n",
-      "tensor(0.4930)\n",
-      "tensor(0.5008)\n",
-      "tensor(0.5069)\n",
-      "tensor(0.5122)\n",
-      "tensor(0.5180)\n",
-      "tensor(0.5236)\n",
-      "tensor(0.5291)\n",
-      "tensor(0.5338)\n",
-      "tensor(0.5380)\n",
-      "tensor(0.5422)\n",
-      "tensor(0.5460)\n",
-      "tensor(0.5513)\n",
-      "tensor(0.5578)\n",
-      "tensor(0.5634)\n",
-      "tensor(0.5808)\n",
-      "tensor(0.5566)\n",
-      "tensor(0.5274)\n"
+      "tensor(0.1690)\n",
+      "tensor(0.3341)\n",
+      "tensor(0.4370)\n",
+      "tensor(0.5119)\n",
+      "tensor(0.5735)\n",
+      "tensor(0.6174)\n",
+      "tensor(0.6490)\n",
+      "tensor(0.6732)\n",
+      "tensor(0.6910)\n",
+      "tensor(0.7045)\n",
+      "tensor(0.7146)\n",
+      "tensor(0.7235)\n",
+      "tensor(0.7312)\n",
+      "tensor(0.7374)\n",
+      "tensor(0.7428)\n",
+      "tensor(0.7474)\n",
+      "tensor(0.7508)\n",
+      "tensor(0.7551)\n",
+      "tensor(0.7592)\n",
+      "tensor(0.7641)\n"
      ]
     }
    ],
@@ -295,13 +264,7 @@
     "            parameter-=lr*parameter.g\n",
     "            \n",
     "    pred = model.forward(x_train)\n",
-    "    print(model.accuracy(pred, y_train))\n",
-    "#     loss = model(x_train, y_train)\n",
-    "#     sm_pred = model.forward(x_train)\n",
-    "#     print()\n",
-    "#     print(\"accuracy\", model.accuracy(x_train, y_train))\n",
-    "#     print(\"loss\", loss)\n",
-    "        "
+    "    print(model.accuracy(pred, y_train))"
    ]
   },
   {
