--- a/models/model2-softmax.ipynb
+++ b/models/model2-softmax.ipynb
@@ -149,23 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<nn.lin.Lin object at 0x7f0dd40e1eb8>, <nn.relu.Relu object at 0x7f0dd40e1e80>, <nn.lin.Lin object at 0x7f0dd40e1908>]\n"
+      "[<nn.lin.Lin object at 0x7fd42bf68f60>, <nn.relu.Relu object at 0x7fd42bf68208>, <nn.lin.Lin object at 0x7fd42bf686a0>]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor(-0.0887)"
+       "tensor(-0.0925)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0821)"
+       "tensor(0.0987)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,33 +219,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.1690)\n",
-      "tensor(0.3341)\n",
-      "tensor(0.4370)\n",
-      "tensor(0.5119)\n",
-      "tensor(0.5735)\n",
-      "tensor(0.6174)\n",
-      "tensor(0.6490)\n",
-      "tensor(0.6732)\n",
-      "tensor(0.6910)\n",
-      "tensor(0.7045)\n",
-      "tensor(0.7146)\n",
-      "tensor(0.7235)\n",
-      "tensor(0.7312)\n",
-      "tensor(0.7374)\n",
-      "tensor(0.7428)\n",
-      "tensor(0.7474)\n",
-      "tensor(0.7508)\n",
-      "tensor(0.7551)\n",
-      "tensor(0.7592)\n",
-      "tensor(0.7641)\n"
+      "tensor(0.1788)\n",
+      "tensor(0.3312)\n",
+      "tensor(0.4837)\n",
+      "tensor(0.5686)\n",
+      "tensor(0.6115)\n",
+      "tensor(0.6399)\n",
+      "tensor(0.6598)\n",
+      "tensor(0.6771)\n",
+      "tensor(0.6907)\n",
+      "tensor(0.7049)\n",
+      "tensor(0.7188)\n",
+      "tensor(0.7323)\n",
+      "tensor(0.7472)\n",
+      "tensor(0.7650)\n",
+      "tensor(0.7781)\n",
+      "tensor(0.7958)\n",
+      "tensor(0.8078)\n",
+      "tensor(0.8133)\n",
+      "tensor(0.8165)\n",
+      "tensor(0.8185)\n"
      ]
     }
    ],
@@ -263,8 +263,8 @@
     "        for parameter in parameters:\n",
     "            parameter-=lr*parameter.g\n",
     "            \n",
-    "    pred = model.forward(x_train)\n",
-    "    print(model.accuracy(pred, y_train))"
+    "    pred = model.forward(x_valid)\n",
+    "    print(model.accuracy(pred, y_valid))"
    ]
   },
   {
