--- a/models/archived/model5-Module.ipynb
+++ b/models/archived/model5-Module.ipynb
@@ -22,7 +22,8 @@
     "from data.loader import *\n",
     "from nn.lin import *\n",
     "from nn.relu import *\n",
-    "from nn.softmaxCrossEntropy import *"
+    "from nn.softmaxCrossEntropy import *\n",
+    "from nn.module import Module"
    ]
   },
   {
@@ -101,39 +102,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Model():\n",
+    "class Model(Module):\n",
     "    def __init__(self, n_in, nh, n_out):\n",
     "        self.layers = [Lin(n_in,nh),\n",
     "                       Relu(),\n",
     "                       Lin(nh,n_out)]\n",
     "        self.loss = SoftmaxCrossEntropy()\n",
-    "        \n",
-    "#     def __setattr__(self,k,v):\n",
-    "#         if not k.startswith(\"_\"): self.layers[k] = v\n",
-    "#         super().__setattr__(k,v)\n",
-    "        \n",
-    "    def __repr__(self): \n",
-    "        repr = \"Model(\" + \"\\n\"\n",
-    "        for i, l in enumerate (self.layers):\n",
-    "            repr+= f\"(layer_{i}):\" + str(l) + \"\\n\"\n",
-    "        repr+=\")\"\n",
-    "        return repr\n",
-    "    \n",
-    "    def parameters(self):\n",
-    "        for l in self.layers:\n",
-    "            for p in l.parameters(): yield p\n",
-    "        \n",
-    "    def __call__(self, x, targ):\n",
-    "        for l in self.layers: x = l(x)\n",
-    "        return self.loss(x, targ)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        for l in self.layers: x = l(x)\n",
-    "        return self.loss.softmax_forward(x)\n",
-    "    \n",
-    "    def backward(self, y_train):\n",
-    "        self.loss.backward()\n",
-    "        for l in reversed(self.layers): l.backward()\n",
     "    \n",
     "    def accuracy(self, pred, yb): return (torch.argmax(pred, dim=1)==yb).float().mean()"
    ]
@@ -150,6 +124,7 @@
        "(layer_0):Linear(in_features=784, out_features=50)\n",
        "(layer_1):Relu()\n",
        "(layer_2):Linear(in_features=50, out_features=10)\n",
+       "(layer_3):Softmax() & Cross_entropy_loss()\n",
        ")"
       ]
      },
@@ -194,7 +169,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-0.1224)"
+       "tensor(-0.0973)"
       ]
      },
      "execution_count": 10,
@@ -223,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.1467)"
+       "tensor(0.0975)"
       ]
      },
      "execution_count": 12,
@@ -276,26 +251,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.1649)\n",
-      "tensor(0.2896)\n",
-      "tensor(0.4120)\n",
-      "tensor(0.5057)\n",
-      "tensor(0.5670)\n",
-      "tensor(0.6120)\n",
-      "tensor(0.6401)\n",
-      "tensor(0.6575)\n",
-      "tensor(0.6744)\n",
-      "tensor(0.6883)\n",
-      "tensor(0.7049)\n",
-      "tensor(0.7183)\n",
-      "tensor(0.7305)\n",
-      "tensor(0.7403)\n",
-      "tensor(0.7530)\n",
-      "tensor(0.7620)\n",
-      "tensor(0.7710)\n",
-      "tensor(0.7773)\n",
-      "tensor(0.7840)\n",
-      "tensor(0.7898)\n"
+      "tensor(0.1156)\n",
+      "tensor(0.2135)\n",
+      "tensor(0.3062)\n",
+      "tensor(0.3964)\n",
+      "tensor(0.4655)\n",
+      "tensor(0.5170)\n",
+      "tensor(0.5544)\n",
+      "tensor(0.5894)\n",
+      "tensor(0.6170)\n",
+      "tensor(0.6385)\n",
+      "tensor(0.6521)\n",
+      "tensor(0.6652)\n",
+      "tensor(0.6749)\n",
+      "tensor(0.6842)\n",
+      "tensor(0.6950)\n",
+      "tensor(0.7055)\n",
+      "tensor(0.7210)\n",
+      "tensor(0.7448)\n",
+      "tensor(0.7725)\n",
+      "tensor(0.7932)\n"
      ]
     }
    ],
