--- a/docs/nn_softmaxCrossEntropy.ipynb
+++ b/docs/nn_softmaxCrossEntropy.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "class SoftmaxCrossEntropy(Neural):\n",
+    "    \n",
+    "    def __repr__(self): return \"Softmax()\" +\" & \"+ \"Cross_entropy_loss()\" \n",
     "    \n",
     "    def softmax_forward(self, inp): \n",
     "        m = inp.max(-1)[0]\n",
@@ -61,12 +72,14 @@
     "        m = targ.shape[0]\n",
     "        grad = self.softmax_forward(inp)\n",
     "        grad[torch.arange(m), targ] = -1\n",
-    "        inp.g = grad/m"
+    "        inp.g = grad/m\n",
+    "        \n",
+    "    def accuracy(self, pred, yb): return (torch.argmax(pred, dim=1)==yb).float().mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
