--- a/models/callback-dev.ipynb
+++ b/models/callback-dev.ipynb
@@ -13,75 +13,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CallbackHandler():\n",
-    "    def __init__(self,cbs=None):\n",
-    "        self.cbs = cbs if cbs else []\n",
+    "#export\n",
+    "import re\n",
     "\n",
-    "    def begin_fit(self, learn):\n",
-    "        self.learn,self.in_train = learn,True\n",
-    "        learn.stop = False\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.begin_fit(learn)\n",
-    "        return res\n",
+    "_camel_re1 = re.compile('(.)([A-Z][a-z]+)')\n",
+    "_camel_re2 = re.compile('([a-z0-9])([A-Z])')\n",
+    "def camel2snake(name):\n",
+    "    s1 = re.sub(_camel_re1, r'\\1_\\2', name)\n",
+    "    return re.sub(_camel_re2, r'\\1_\\2', s1).lower()\n",
     "\n",
-    "    def after_fit(self):\n",
-    "        res = not self.in_train\n",
-    "        for cb in self.cbs: res = res and cb.after_fit()\n",
-    "        return res\n",
-    "    \n",
-    "    def begin_epoch(self, epoch):\n",
-    "        self.learn.model.train()\n",
-    "        self.in_train=True\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.begin_epoch(epoch)\n",
-    "        return res\n",
-    "\n",
-    "    def begin_validate(self):\n",
-    "        self.learn.model.eval()\n",
-    "        self.in_train=False\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.begin_validate()\n",
-    "        return res\n",
-    "\n",
-    "    def after_epoch(self):\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.after_epoch()\n",
-    "        return res\n",
-    "    \n",
-    "    def begin_batch(self, xb, yb):\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.begin_batch(xb, yb)\n",
-    "        return res\n",
-    "\n",
-    "    def after_loss(self, loss):\n",
-    "        res = self.in_train\n",
-    "        for cb in self.cbs: res = res and cb.after_loss(loss)\n",
-    "        return res\n",
-    "\n",
-    "    def after_backward(self):\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.after_backward()\n",
-    "        return res\n",
-    "\n",
-    "    def after_step(self):\n",
-    "        res = True\n",
-    "        for cb in self.cbs: res = res and cb.after_step()\n",
-    "        return res\n",
-    "    \n",
-    "    def do_stop(self):\n",
-    "        try:     return self.learn.stop\n",
-    "        finally: self.learn.stop = False"
+    "class Callback():\n",
+    "    _order=0\n",
+    "    def set_runner(self, run): self.run=run\n",
+    "    def __getattr__(self, k): return getattr(self.run, k)\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        #re.sub(pattern, repl, string)\n",
+    "        name = re.sub(r'Callback$', '', self.__class__.__name__)\n",
+    "        return camel2snake(name or 'callback')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "This first callback is reponsible to switch the model back and forth in training or validation mode, as well as maintaining a count of the iterations, or the percentage of iterations ellapsed in the epoch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class TrainEvalCallback(Callback):\n",
+    "    def begin_fit(self):\n",
+    "        self.run.n_epochs=0.\n",
+    "        self.run.n_iter=0\n",
+    "    \n",
+    "    def after_batch(self):\n",
+    "        if not self.in_train: return\n",
+    "        self.run.n_epochs += 1./self.iters\n",
+    "        self.run.n_iter   += 1\n",
+    "        \n",
+    "    def begin_epoch(self):\n",
+    "        self.run.n_epochs=self.epoch\n",
+    "        self.model.train()\n",
+    "        self.run.in_train=True\n",
+    "\n",
+    "    def begin_validate(self):\n",
+    "        self.model.eval()\n",
+    "        self.run.in_train=False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll also re-create our TestCallback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestCallback(Callback):\n",
+    "    def after_step(self):\n",
+    "        if self.train_eval.n_iters>=10: return True"
    ]
   },
   {
