--- a/docs/nn_nn.ipynb
+++ b/docs/nn_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,37 +31,42 @@
     "from pathlib import Path\n",
     "sys.path.append(Path.cwd().parent.as_posix())\n",
     "\n",
+    "from nn.module import Module\n",
     "from nn.lin import Lin\n",
     "from nn.relu import Relu\n",
     "from nn.softmaxCrossEntropy import SoftmaxCrossEntropy\n",
-    "from nn.mse import Mse"
+    "from nn.mse import Mse\n",
+    "from nn.sequentialModel import SequentialModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "class nn():\n",
     "    @classmethod\n",
-    "    def Lin(*args):\n",
-    "        self.Lin = Lin(*args)\n",
+    "    def Lin(self, *args):\n",
+    "        return Lin(*args)\n",
     "    @classmethod\n",
-    "    def Relu(*args):\n",
-    "        self.Relu = Relu(*args)\n",
+    "    def Relu(self, *args):\n",
+    "        return Relu(*args)\n",
     "    @classmethod\n",
-    "    def softmaxCrossEntropy(*args):\n",
-    "        self.softmaxCrossEntropy = softmaxCrossEntropy(*args)\n",
+    "    def SoftmaxCrossEntropy(self, *args):\n",
+    "        return SoftmaxCrossEntropy(*args)\n",
     "    @classmethod\n",
-    "    def Mse(*args):\n",
-    "        self.Mse = Mse(*args)"
+    "    def Mse(self, *args):\n",
+    "        return Mse(*args)\n",
+    "    @classmethod\n",
+    "    def Sequential(self, *args):\n",
+    "        return SequentialModel(*args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
