--- a/models/model2-learner.ipynb
+++ b/models/model2-learner.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,27 +24,8 @@
     "from nn.module import Module\n",
     "\n",
     "from data.scraper import avaliable_urls\n",
-    "from data.processor import data_processor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[nn.nn.nn, object]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nn.mro()"
+    "from data.processor import data_processor\n",
+    "from api.optimizer import Optimizer "
    ]
   },
   {
@@ -89,10 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Model(Module):\n",
-    "    def __init__(self, layers):\n",
-    "        self.layers = layers\n",
-    "        self.loss = SoftmaxCrossEntropy()"
+    "bs = 5000"
    ]
   },
   {
@@ -101,21 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs = 10000 "
+    "train_dl, valid_dl = data_processor(bs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dl, valid_ds = data_processor(bs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +89,28 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = Model([Lin(784,50), Relu(), Lin(50, 10)]); model"
+    "model = nn.Sequential(\n",
+    "    [nn.Lin(784,50),\n",
+    "     nn.Relu(),\n",
+    "     nn.Lin(50, 10)],\n",
+    "     nn.SoftmaxCrossEntropy()); \n",
+    "\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = Optimizer(model.parameters(), 0.01)"
    ]
   },
   {
@@ -144,61 +119,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = 0.01  \n",
-    "epochs = 20 "
+    "epochs = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fit():\n",
-    "    for epoch in range(epochs):\n",
-    "        for xb, yb in train_dl:\n",
-    "            loss = model(xb, yb)\n",
-    "            model.backward(yb)\n",
-    "            model.update_parameters(lr)\n",
-    "        pred = model.forward(valid_ds.x)\n",
-    "        print(model.loss.accuracy(pred, valid_ds.y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.2554)\n",
-      "tensor(0.4104)\n",
-      "tensor(0.5361)\n",
-      "tensor(0.5965)\n",
-      "tensor(0.6268)\n",
-      "tensor(0.6415)\n",
-      "tensor(0.6522)\n",
-      "tensor(0.6605)\n",
-      "tensor(0.6671)\n",
-      "tensor(0.6725)\n",
-      "tensor(0.6835)\n",
-      "tensor(0.6931)\n",
-      "tensor(0.7009)\n",
-      "tensor(0.7077)\n",
-      "tensor(0.7137)\n",
-      "tensor(0.7173)\n",
-      "tensor(0.7226)\n",
-      "tensor(0.7284)\n",
-      "tensor(0.7413)\n",
-      "tensor(0.7506)\n"
+      "0 0.3798\n",
+      "1 0.5268\n",
+      "2 0.6236\n",
+      "3 0.6751\n",
+      "4 0.7111\n",
+      "5 0.7376\n",
+      "6 0.757\n",
+      "7 0.7729\n",
+      "8 0.7739\n",
+      "9 0.7887\n"
      ]
     }
    ],
    "source": [
-    "fit()"
+    "for epoch in range(epochs):\n",
+    "    for xb, yb in train_dl:\n",
+    "        loss = model(xb, yb)\n",
+    "        model.backward(yb)\n",
+    "        opt.step()\n",
+    "        opt.zero_grad()\n",
+    "    total_accuracy = 0.\n",
+    "    for xb, yb in valid_dl:\n",
+    "        pred = model.forward(xb)\n",
+    "        total_accuracy+=model.loss.accuracy(pred, yb)*len(xb)\n",
+    "    print(epoch, round(total_accuracy/len(valid_dl), 5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
