--- a/docs/data_bunch.ipynb
+++ b/docs/data_bunch.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,41 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def collate(b):\n",
-    "    xs,ys = zip(*b)\n",
-    "    return torch.stack(xs),torch.stack(ys)\n",
-    "    #glues tensors together on new axis\n",
-    "\n",
-    "class DataLoader():\n",
-    "    def __init__(self, ds, sampler, collate_fn=collate):\n",
-    "        self.ds,self.sampler,self.collate_fn = ds,sampler,collate_fn\n",
+    "class DataBunch():\n",
+    "    def __init__(self, train_dl, valid_dl, c=None):\n",
+    "        self.train_dl,self.valid_dl,self.c = train_dl,valid_dl,c\n",
     "        \n",
-    "    def __iter__(self):\n",
-    "        for s in self.sampler: yield self.collate_fn([self.ds[i] for i in s])\n",
-    "            \n",
-    "    def __len__(self): return len(self.ds)         \n",
-    "    \n",
-    "    "
+    "    @property\n",
+    "    def train_ds(self): return self.train_dl.ds\n",
+    "        \n",
+    "    @property\n",
+    "    def valid_ds(self): return self.valid_dl.ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +48,12 @@
      "output_type": "stream",
      "text": [
       "Replacing old file\r\n",
-      "Converted data_loader.ipynb to /data/home/jdavey/notebooks/fastai/MoltenAI/data/loader.py\r\n"
+      "Converted data_bunch.ipynb to /data/home/jdavey/notebooks/fastai/MoltenAI/data/bunch.py\r\n"
      ]
     }
    ],
    "source": [
-    "!python notebook2script.py data_loader.ipynb"
+    "!python notebook2script.py data_bunch.ipynb"
    ]
   },
   {
