--- a/docs/nn_sequentialModel.ipynb
+++ b/docs/nn_sequentialModel.ipynb
@@ -43,7 +43,9 @@
     "class SequentialModel(Module):\n",
     "    def __init__(self, layers, loss):\n",
     "        self.layers = layers\n",
-    "        self.loss = loss"
+    "        self.loss = loss\n",
+    "    def train(self),\n",
+    "    "
    ]
   },
   {
